# vzdv

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE-MIT  README.md  config.toml  existing_site_scrape.js  site_config.sample.toml  site_config.sample.vzdv.toml  vzdv.empty.toml  vzdv.example.toml
.github/workflows/: ci.yml
assets/: index.html
ops/: Caddyfile  Caddyfile-maintenance  backup.sh  crontab  update.sh  vzdv-bot.service  vzdv-site.service  vzdv-tasks.service
src/: config.rs  endpoints.rs  lib.rs  main.rs  middleware.rs  shared.rs  sql.rs
src/endpoints/: admin.rs  airspace.rs  auth.rs  events.rs  facility.rs  homepage.rs  mod.rs  pilots.rs  user.rs
src/shared/: config.rs  mod.rs  sql.rs
src/utils/: auth.rs  flashed_messages.rs  mod.rs  vatsim.rs  vatusa.rs
templates/: 404.jinja  _error.jinja  _layout.jinja  activity.jinja  airports.jinja  feedback.jinja  flights.jinja  home.jinja  layout.jinja  login_complete.jinja  pilot_feedback.jinja  roster.jinja  staff.jinja  staffing_request.jinja  weather.jinja
templates/admin/: feedback.jinja  roster.jinja
templates/airspace/: flights.jinja
templates/events/: event.jinja
templates/facility/: activity.jinja  resources.jinja  roster.jinja  visitor_application.jinja  visitor_application_form.jinja
templates/homepage/: flights.jinja  home.jinja  online_controllers.jinja  weather.jinja
templates/snippets/: flights.jinja  online_controllers.jinja  weather.jinja  weather_readout.jinja
templates/user/: discord.jinja  training_notes.jinja
vzdv/: Cargo.toml
vzdv-bot/: Cargo.toml
vzdv-bot/src/: commands.rs  main.rs
vzdv-bot/src/tasks/: mod.rs  off_roster.rs  online.rs  roles.rs
vzdv-import/: Cargo.toml
vzdv-import/src/: main.rs
vzdv-site/: Cargo.toml
vzdv-site/src/: discord.rs  email.rs  flashed_messages.rs  main.rs  middleware.rs  shared.rs
vzdv-site/src/endpoints/: admin.rs  airspace.rs  auth.rs  controller.rs  events.rs  facility.rs  homepage.rs  mod.rs  user.rs
vzdv-site/templates/: 404.jinja  _error.jinja  _layout.jinja  feedback.jinja
vzdv-site/templates/admin/: email_test.jinja  feedback.jinja  logs.jinja  manual_email.jinja  off_roster_list.jinja  resources.jinja  visitor_applications.jinja
vzdv-site/templates/airspace/: flights.jinja  staffing_request.jinja
vzdv-site/templates/controller/: controller.jinja  training_notes.jinja
vzdv-site/templates/events/: event.jinja  upcoming_events.jinja  upcoming_events_snippet.jinja
vzdv-site/templates/facility/: activity.jinja  resources.jinja  roster.jinja  staff.jinja  visitor_application.jinja  visitor_application_form.jinja
vzdv-site/templates/homepage/: cotm.jinja  home.jinja
vzdv-site/templates/user/: discord.jinja  overview.jinja  request_training.jinja  training_notes.jinja
vzdv-tasks/: Cargo.toml
vzdv-tasks/src/: main.rs
vzdv/src/: aviation.rs  config.rs  db.rs  lib.rs  simaware.rs  sql.rs  vatsim.rs  vatusa.rs
