[package]
name = "new_site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
log = "0.4.20"
minijinja = "1.0.12"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
