[package]
name = "vzdv"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = "VATSIM ZDV website"
readme = "README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"
log = "0.4.20"
mini-moka = { version = "0.10.3", features = ["sync"] }
minijinja = "1.0.12"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["timeout"] }
tower-sessions = "0.11.0"
tower-sessions-sqlx-store = { version = "0.11.0", features = ["sqlite"] }
vatsim_utils = "0.5.0"

[dev-dependencies]
rusty-hook = "0.11.2"
