[package]
name = "vzdv-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.86"
base64 = "0.22.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
