[package]
name = "vzdv-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.22"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
