[package]
name = "vzdv-import"
version = "0.1.0"
edition = "2021"

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
