[package]
name = "vzdv-site"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = "VATSIM ZDV website"
readme = "../README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.13.0"
log = "0.4.20"
once_cell = "1.19.0"
mini-moka = { version = "0.10.3", features = ["sync"] }
minijinja = "2.0.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "timeout"] }
tower-sessions = "0.12.0"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
vatsim_utils = "0.5.0"
voca_rs = "1.15.2"
chrono-tz = "0.9.0"
