[package]
name = "vzdv"
version = "0.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "VATSIM ZDV site core"
readme = "../README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "sqlx-sqlite", "chrono"] }
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "timeout"] }
tower-sessions = "0.12.0"
tower-sessions-sqlx-store = { version = "0.13.0", features = ["sqlite"] }
vatsim_utils = "0.5.0"
voca_rs = "1.15.2"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
